# app_42

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compile.sh  docker-compose.debug.yml  run.sh
cli/: CMakeLists.txt
cli/include/: parser.h  sender.h
cli/src/: main.cpp  parser.cpp  sender.cpp
include/: calculator.h  server.h
src/: calculator.cpp  main.cpp  server.cpp
